--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -12,11 +12,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: anc95/ChatGPT-CodeReview@main
+      - uses: actions/checkout@v3
+
+      - name: Install script dependencies
+        shell: bash
+        working-directory: ./.github/scripts
+        run: npm install
+
+      - name: Use chatgpt review script
+        working-directory: .github/scripts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          LANGUAGE: Portuguese
-          MODEL: gpt-3.5-turbo
-          top_p: 1
-          temperature: 0.7
+          REPOSITORY: ${{ github.repository }}
+          PULL_NUMBER: ${{ github.event.number }} 
+        run: node index.js
