--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-node@v3
+        with:
+         node-version: 14.17.4
+
       - name: Install script dependencies
         shell: bash
         working-directory: ./.github/scripts
