--- a/.github/scripts/package.json
+++ b/.github/scripts/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "@octokit/rest": "^19.0.7",
-    "chatgpt": "^5",
-    "node-fetch": "^3.3.0"
+    "chatgpt": "^5"
   }
 }
